# shexkellWeb

./: README.md
ShexkellWeb-API/: ShexkellWeb.cabal  stack.yaml
ShexkellWeb-API/app/: Main.hs
ShexkellWeb-API/src/Controller/: ValidationController.hs
ShexkellWeb-API/src/Model/: ValidationRequest.hs
ShexkellWeb-Interface/: .gitignore  package.json  shexkell.html
ShexkellWeb-Interface/scripts/: shexkell.js
ShexkellWeb-Interface/styles/: shexkell.css
