name:                ShexkellWeb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/weso/shexkellWeb#readme
license:             MIT
license-file:        ../LICENSE
author:              Sergio Franco García
maintainer:          sergioifg94@gmail.com
copyright:           2017 Sergio Franco García
category:            Web
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Controller.ValidationController
                     , Model.ValidationRequest
  build-depends:       base >= 4.7 && < 5
                     , Shexkell

                     , Spock >= 0.12.0.0
                     , wai-cors
                     , http-types >= 0.9.1

                     , mtl >= 2.2.1
                     , text >= 1.2.2.1
                     , rdf4h
                     , aeson >= 1.0.2.1
  default-language:    Haskell2010

executable ShexkellWeb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ShexkellWeb
                     , Spock
                     , wai-cors
                     , mtl >= 2.2.1
                     , text >= 1.2.2.1
  default-language:    Haskell2010

test-suite ShexkellWeb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ShexkellWeb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/weso/shexkellWeb
